--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         // ⚙️ ตั้งค่าระบบ (แก้ไขตรงนี้!)
         // ============================================
         const CONFIG = {
-            LIFF_ID: "YOUR_LIFF_ID_HERE",  // ใส่ LIFF ID ที่ได้จาก LINE Dev
+            LIFF_ID: "2008933274-cQhoTxw9",  // ใส่ LIFF ID ที่ได้จาก LINE Dev
             EXEC_URL: "YOUR_EXEC_URL_HERE", // ใส่ลิงก์ Web App (Exec) จาก App Script
             JSON_URL: "YOUR_JSON_URL_HERE"  // ใส่ลิงก์ JSON เมนูอาหาร (จาก Opensheet หรืออื่นๆ)
         };
