Update EXEC_URL to point to the correct Web App

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         // ============================================
         const CONFIG = {
             LIFF_ID: "2008933274-cQhoTxw9",  // ใส่ LIFF ID ที่ได้จาก LINE Dev
-            EXEC_URL: "YOUR_EXEC_URL_HERE", // ใส่ลิงก์ Web App (Exec) จาก App Script
+            EXEC_URL: "https://script.google.com/macros/s/AKfycbwniiJIJjxn7Q3UU1JuLZBus0N8FO_iyomuQyIbZaHSQwGzN6eM2cKCveYzzh7cmMevKA/exec", // ใส่ลิงก์ Web App (Exec) จาก App Script
             JSON_URL: "YOUR_JSON_URL_HERE"  // ใส่ลิงก์ JSON เมนูอาหาร (จาก Opensheet หรืออื่นๆ)
         };
         // ============================================
