--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
         // ============================================
         const CONFIG = {
             LIFF_ID: "2008933274-cQhoTxw9",  // ใส่ LIFF ID ที่ได้จาก LINE Dev
-            EXEC_URL: "https://script.google.com/macros/s/AKfycbwniiJIJjxn7Q3UU1JuLZBus0N8FO_iyomuQyIbZaHSQwGzN6eM2cKCveYzzh7cmMevKA/exec", // ใส่ลิงก์ Web App (Exec) จาก App Script
-            JSON_URL: "YOUR_JSON_URL_HERE"  // ใส่ลิงก์ JSON เมนูอาหาร (จาก Opensheet หรืออื่นๆ)
+            EXEC_URL: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec", // ใส่ลิงก์ Web App (Exec) จาก App Script
+            JSON_URL: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec"  // ใส่ลิงก์ JSON เมนูอาหาร (จาก Opensheet หรืออื่นๆ)
         };
         // ============================================
 
