Refactor CONFIG object to use camelCase keys

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
         //  CONFIG: ตั้งค่าระบบ (ค่าเดิมของคุณ)
         // ==========================================
         const CONFIG = {
-            LIFF_ID: "2008933274-cQhoTxw9",
-            EXEC_URL: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec"
-        };
+    liffId: "2008933274-cQhoTxw9",
+    scriptUrl: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec"
+};
 
         // Global Variables
         let products = [];
