Update CONFIG to include EXEC_URL property
Added EXEC_URL property to CONFIG for fetchAPI usage.

--- a/index.html
+++ b/index.html
@@ -819,10 +819,13 @@
         // ==========================================
         //  CONFIGURATION
         // ==========================================
-        const CONFIG = {
-            liffId: "2008933274-cQhoTxw9",
-            scriptUrl: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec"
-        };
+       const CONFIG = {
+    liffId: "2008933274-cQhoTxw9",
+    scriptUrl: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec",
+    
+    // เพิ่ม property นี้ถ้า fetchAPI ยังใช้ EXEC_URL
+    EXEC_URL: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec"
+};
 
         // ==========================================
         //  GLOBAL VARIABLES
