Update Google Maps API Key in index.html

--- a/index.html
+++ b/index.html
@@ -874,7 +874,9 @@
             liffId: "2008933274-cQhoTxw9",
             scriptUrl: "https://script.google.com/macros/s/AKfycbzKGEIllWVMwLiI60gzOW_I7FpRnu7MGT8dsORN58q0LD0pPhOJSi5KiSZqesg-Z4i3/exec",
             // ใช้ Google Maps API Key แบบ hardcode สำหรับทดสอบ (ควรเปลี่ยนเป็นของตัวเอง)
-            mapsApiKey: "YOUR_GOOGLE_MAPS_API_KEY" // <-- ใส่ API Key ของคุณที่นี่
+            mapsApiKey: "
+AIzaSyB5dlgG6d-vrJWhH9mFt6AknBBBtdZ5lQk
+" // <-- ใส่ API Key ของคุณที่นี่
         };
 
         // ==========================================
