--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <?!= include('style'); ?>
 </head>
 <body class="bg-slate-50 text-slate-800">
   <div id="loading-overlay" class="loading-overlay">
@@ -215,6 +215,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <script src="app.js"></script>
+  <?!= include('app'); ?>
 </body>
 </html>
